Bump gradle version, remove a few unneeded dependencies, move to JDK17